[package]
name = "irc"
version = "0.15.0"
description = "the irc crate – usable, async IRC for Rust "
authors = ["Aaron Weiss <aweiss@hey.com>"]
license = "MPL-2.0"
keywords = ["irc", "client", "thread-safe", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/irc/"
repository = "https://github.com/aatxe/irc"
readme = "README.md"
edition = "2018"


[badges]
travis-ci = { repository = "aatxe/irc" }
is-it-maintained-issue-resolution = { repository = "aatxe/irc" }
is-it-maintained-open-issues = { repository = "aatxe/irc" }


[workspace]
members = ["./", "irc-proto/"]


[features]
# warning: adding the `essentials` feature to default breaks semver. I should turn this into a reductive feature once I know that the code works. I'm just using a normal feature temporarily because otherwise VS Code won't show errors properly.
default = ["ctcp", "tls-native", "toml_config", "essentials", "codec-tests"]
ctcp = []
nochanlists = []
essentials = []
codec-tests = ["anyhow"]

json_config = ["serde", "serde/derive", "serde_derive", "serde_json"]
toml_config = ["serde", "serde/derive", "serde_derive", "toml"]
yaml_config = ["serde", "serde/derive", "serde_derive", "serde_yaml"]
# Temporary transitionary features
json = ["json_config"]
yaml = ["yaml_config"]

proxy = ["tokio-socks"]

tls-native = ["native-tls", "tokio-native-tls"]
tls-rust = ["tokio-rustls", "webpki-roots"]


[dependencies]
chrono = "0.4.0"
encoding = "0.2.0"
futures-util = { version = "0.3.0", default-features = false, features = ["alloc", "sink"] }
irc-proto = { version = "0.15.0", path = "irc-proto" }
log = "0.4.0"
parking_lot = "0.11.0"
thiserror = "1.0.0"
pin-project = "1.0.2"
tokio = { version = "1.0.0", features = ["net", "time", "sync"] }
tokio-stream = "0.1.0"
tokio-util = { version = "0.6.0", features = ["codec"] }

# Feature - Config
serde = { version = "1.0.0", optional = true }
serde_derive = { version = "1.0.0", optional = true }
serde_json = { version = "1.0.0", optional = true }
serde_yaml = { version = "0.8.0", optional = true }
toml = { version = "0.5.0", optional = true }

# Feature - Proxy
tokio-socks = { version = "0.5.1", optional = true }

# Feature - TLS
native-tls = { version = "0.2.0", optional = true }
tokio-rustls = { version = "0.22.0", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
webpki-roots = { version = "0.20.0", optional = true }

# Feature - Test Suite
anyhow = { version = "1.0.0", optional = true }

[dev-dependencies]
anyhow = "1.0.0"
args = "2.0.0"
env_logger = "0.7.0"
futures = "0.3.0"
getopts = "0.2.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }


[[example]]
name = "simple_proxy"
path = "examples/simple_proxy.rs"
required-features = ["proxy", "essentials"]

[[example]]
name = "simple_plaintext"
path = "examples/simple_plaintext.rs"
required-features = ["tls-native", "essentials"]

[[example]]
name = "tweeter"
path = "examples/tweeter.rs"
required-features = ["essentials"]

[[example]]
name = "tooter"
path = "examples/tooter.rs"
required-features = ["essentials"]

[[example]]
name = "repeater"
path = "examples/repeater.rs"
required-features = ["essentials"]

[[example]]
name = "build_bot"
path = "examples/build-bot.rs"
required-features = ["essentials"]

[[example]]
name = "multiserver"
path = "examples/multiserver.rs"
required-features = ["essentials"]
