[package]
name = "irc-proto"
version = "0.15.0"
description = "The IRC protocol distilled."
authors = ["Aaron Weiss <aweiss@hey.com>"]
license = "MPL-2.0"
keywords = ["irc", "protocol", "tokio"]
categories = ["network-programming"]
documentation = "https://docs.rs/irc-proto/"
repository = "https://github.com/aatxe/irc"
edition = "2018"

[badges]
travis-ci = { repository = "aatxe/irc" }

[features]
default = ["bytes", "tokio", "tokio-util"]

[dependencies]
encoding = "0.2.0"
thiserror = "1.0.0"

bytes = { version = "1.0.0", optional = true }
tokio = { version = "1.0.0", optional = true }
tokio-util = { version = "0.6.0", features = ["codec"], optional = true }
