[package]
name = "no-parse-codec"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc-interface = { path = "../irc-interface" }
once_cell = "1.13.0"
regex = "1.6.0"

[dev-dependencies]
irc = { path = "../", default-features = false, features = ["codec-tests"] }
anyhow = "1.0.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
env_logger = "0.9.1"
futures-util = "0.3.25"
